fully setup python environment for debuggin or testing of any element

--- a/do not delete/.vscode/launch.json
+++ b/do not delete/.vscode/launch.json
@@ -82,7 +82,7 @@
         },
         {
             "name": "Python: Test Homepage Title",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/run_e2e_test.py",
             "console": "integratedTerminal",
@@ -90,7 +90,7 @@
         },
         {
             "name": "Python: Test Timeline View Switch",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/run_e2e_test.py",
             "console": "integratedTerminal",
@@ -98,7 +98,7 @@
         },
         {
             "name": "Python: Test Sidebar Collapse",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/run_e2e_test.py",
             "console": "integratedTerminal",
